@@ -150,7 +150,7 @@
 			<VersionInfo Name="MajorVer">0</VersionInfo>
 			<VersionInfo Name="MinorVer">1</VersionInfo>
 			<VersionInfo Name="Release">0</VersionInfo>
-			<VersionInfo Name="Build">219</VersionInfo>
+			<VersionInfo Name="Build">247</VersionInfo>
 			<VersionInfo Name="Debug">False</VersionInfo>
 			<VersionInfo Name="PreRelease">True</VersionInfo>
 			<VersionInfo Name="Special">False</VersionInfo>
@@ -162,7 +162,7 @@
 		<VersionInfoKeys>
 			<VersionInfoKeys Name="CompanyName">Enchanted Keyfinder Project</VersionInfoKeys>
 			<VersionInfoKeys Name="FileDescription">Enchanted Keyfinder</VersionInfoKeys>
-			<VersionInfoKeys Name="FileVersion">0.1.0.219</VersionInfoKeys>
+			<VersionInfoKeys Name="FileVersion">0.1.0.247</VersionInfoKeys>
 			<VersionInfoKeys Name="InternalName">keyfinder</VersionInfoKeys>
 			<VersionInfoKeys Name="LegalCopyright">GPL</VersionInfoKeys>
 			<VersionInfoKeys Name="LegalTrademarks"></VersionInfoKeys>
